fix - nav and title spacing on certain screen sizes

--- a/capstone/static/css/scss/_nav.scss
+++ b/capstone/static/css/scss/_nav.scss
@@ -45,7 +45,7 @@ nav[aria-label="main"] {
   a {
     border-bottom: 0;
   }
-  @include media-breakpoint-down(sm) {
+  @include media-breakpoint-down(lg) {
     font-size: 1.2rem;
   }
 }
